--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
       <div class="container-fluid product-container">
         <div class="product-item">
           <div class="top-rating"></div>
-          <img class="item-product-img" src="./img/tartas/tarta01.jpg" alt="Imagen de tarta de chocolate"
+          <img class="item-product-img" loading="lazy" src="./img/tartas/tarta01.jpg" alt="Imagen de tarta de chocolate"
             data-bs-container="body"
             data-bs-toggle="popover"
             data-bs-placement="bottom"
@@ -98,7 +98,7 @@
         </div>
         <div class="product-item">
           <div class="top-rating">⭐️⭐️⭐️</div>
-          <img class="item-product-img" src="./img/tartas/tarta02.jpg" alt="Imagen de tarta arcoiris" 
+          <img class="item-product-img" loading="lazy" src="./img/tartas/tarta02.jpg" alt="Imagen de tarta arcoiris" 
             data-bs-container="body"
             data-bs-toggle="popover"
             data-bs-placement="bottom"
@@ -115,7 +115,7 @@
         </div>
         <div class="product-item">
           <div class="top-rating"></div>
-          <img class="item-product-img" src="./img/tartas/tarta03.jpg" alt="Imagen de tarta de chocolate" 
+          <img class="item-product-img" loading="lazy" src="./img/tartas/tarta03.jpg" alt="Imagen de tarta de chocolate" 
             data-bs-container="body"
             data-bs-toggle="popover"
             data-bs-placement="bottom"
@@ -133,7 +133,7 @@
         </div>
         <div class="product-item">
           <div class="top-rating">⭐️⭐️⭐️⭐️</div>
-          <img class="item-product-img" src="./img/tartas/tarta04.jpg" alt="Imagen de tarta de chocolate"
+          <img class="item-product-img" loading="lazy" src="./img/tartas/tarta04.jpg" alt="Imagen de tarta de chocolate"
             data-bs-container="body"
             data-bs-toggle="popover"
             data-bs-placement="bottom"
@@ -151,7 +151,7 @@
         </div>
         <div class="product-item">
           <div class="top-rating"></div>
-          <img class="item-product-img" src="./img/tartas/tarta02.jpg" alt="Imagen de tarta de chocolate" />
+          <img class="item-product-img" loading="lazy" src="./img/tartas/tarta02.jpg" alt="Imagen de tarta de chocolate" />
           <div class="item-description">Tarta Arcoiris</div>
           <div class="item-price">Desde 34,99€</div>
         </div>
@@ -161,37 +161,37 @@
       <div class="container-fluid product-container">
         <div class="product-item">
           <div class="top-rating"></div>
-          <img class="item-product-img" src="./img/cupcakes/cupcake01.jpg" alt="Imagen de tarta de chocolate" />
+          <img class="item-product-img" loading="lazy" src="./img/cupcakes/cupcake01.jpg" alt="Imagen de tarta de chocolate" />
           <div class="item-description">Cupcake Chocolate</div>
           <div class="item-price">Desde 34,99€</div>
         </div>
         <div class="product-item">
           <div class="top-rating"></div>
-          <img class="item-product-img" src="./img/cupcakes/cupcake02.jpg" alt="Imagen de tarta arcoiris" />
+          <img class="item-product-img" loading="lazy" src="./img/cupcakes/cupcake02.jpg" alt="Imagen de tarta arcoiris" />
           <div class="item-description">Cupcake Fiesta Nube</div>
           <div class="item-price">Desde 39,99€</div>
         </div>
         <div class="product-item">
           <div class="top-rating">⭐️⭐️⭐️</div>
-          <img class="item-product-img" src="./img/cupcakes/cupcake03.jpg" alt="Imagen de tarta de chocolate" />
+          <img class="item-product-img" loading="lazy" src="./img/cupcakes/cupcake03.jpg" alt="Imagen de tarta de chocolate" />
           <div class="item-description">Cupcake Velvet</div>
           <div class="item-price">Desde 34,99€</div>
         </div>
         <div class="product-item">
           <div class="top-rating"></div>
-          <img class="item-product-img" src="./img/cupcakes/cupcake04.jpg" alt="Imagen de tarta de chocolate" />
+          <img class="item-product-img" loading="lazy" src="./img/cupcakes/cupcake04.jpg" alt="Imagen de tarta de chocolate" />
           <div class="item-description">Cupcake Fresa</div>
           <div class="item-price">Desde 34,99€</div>
         </div>
         <div class="product-item">
           <div class="top-rating"></div>
-          <img class="item-product-img" src="./img/cupcakes/cupcake02.jpg" alt="Imagen de tarta arcoiris" />
+          <img class="item-product-img" loading="lazy" src="./img/cupcakes/cupcake02.jpg" alt="Imagen de tarta arcoiris" />
           <div class="item-description">Cupcake Fiesta Nube</div>
           <div class="item-price">Desde 39,99€</div>
         </div>
         <div class="product-item">
           <div class="top-rating"></div>
-          <img class="item-product-img" src="./img/cupcakes/cupcake01.jpg" alt="Imagen de tarta de chocolate" />
+          <img class="item-product-img" loading="lazy" src="./img/cupcakes/cupcake01.jpg" alt="Imagen de tarta de chocolate" />
           <div class="item-description">Cupcake Chocolate</div>
           <div class="item-price">Desde 34,99€</div>
         </div>
@@ -201,37 +201,37 @@
     <div class="container-fluid product-container">
       <div class="product-item">
         <div class="top-rating">⭐️⭐️⭐️⭐️</div>
-        <img class="item-product-img" src="./img/cookies_sweets/cookie01.jpg" alt="Imagen de tarta de chocolate" />
+        <img class="item-product-img" loading="lazy" src="./img/cookies_sweets/cookie01.jpg" alt="Imagen de tarta de chocolate" />
         <div class="item-description">Coockies rellenas</div>
         <div class="item-price">Desde 34,99€</div>
       </div>
       <div class="product-item">
         <div class="top-rating"></div>
-        <img class="item-product-img" src="./img/cookies_sweets/cookie02.jpg" alt="Imagen de tarta de chocolate" />
+        <img class="item-product-img" loading="lazy" src="./img/cookies_sweets/cookie02.jpg" alt="Imagen de tarta de chocolate" />
         <div class="item-description">Cookies de chocolate</div>
         <div class="item-price">Desde 34,99€</div>
       </div>
       <div class="product-item">
         <div class="top-rating">⭐️⭐️⭐️</div>
-        <img class="item-product-img" src="./img/cupcakes/cupcake03.jpg" alt="Imagen de tarta de chocolate" />
+        <img class="item-product-img" loading="lazy" src="./img/cupcakes/cupcake03.jpg" alt="Imagen de tarta de chocolate" />
         <div class="item-description">Cupcake Velvet</div>
         <div class="item-price">Desde 34,99€</div>
       </div>
       <div class="product-item">
         <div class="top-rating"></div>
-        <img class="item-product-img" src="./img/cupcakes/cupcake04.jpg" alt="Imagen de tarta de chocolate" />
+        <img class="item-product-img" loading="lazy" src="./img/cupcakes/cupcake04.jpg" alt="Imagen de tarta de chocolate" />
         <div class="item-description">Cupcake Fresa</div>
         <div class="item-price">Desde 34,99€</div>
       </div>
       <div class="product-item">
         <div class="top-rating">⭐️⭐️⭐️⭐️</div>
-        <img class="item-product-img" src="./img/cookies_sweets/cookie01.jpg" alt="Imagen de tarta de chocolate" />
+        <img class="item-product-img" loading="lazy" src="./img/cookies_sweets/cookie01.jpg" alt="Imagen de tarta de chocolate" />
         <div class="item-description">Coockies rellenas</div>
         <div class="item-price">Desde 34,99€</div>
       </div>
       <div class="product-item">
         <div class="top-rating"></div>
-        <img class="item-product-img" src="./img/cookies_sweets/cookie02.jpg" alt="Imagen de tarta de chocolate" />
+        <img class="item-product-img" loading="lazy" src="./img/cookies_sweets/cookie02.jpg" alt="Imagen de tarta de chocolate" />
         <div class="item-description">Cookies de chocolate</div>
         <div class="item-price">Desde 34,99€</div>
       </div>
@@ -250,7 +250,7 @@
             <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
               <div class="accordion-body">
                 <div class="container-fluid news-container">
-                  <img class="item-product-img" src="./img/tartas/tarta03.jpg" />
+                  <img class="item-product-img" loading="lazy" src="./img/tartas/tarta03.jpg" />
                   <div class="news-text">Estamos emocionados de presentarte nuestra última incorporación a la familia de postres: la <strong>Tarta de San Marcos.</strong>
                     <br><br>Con un irresistible bizcocho esponjoso impregnado de almendra y un toque de esencia de naranja, esta tarta captura la esencia misma de la tradición y el sabor artesanal.
                     Cada bocado te transportará a la cocina de un maestro pastelero, donde cada ingrediente ha sido cuidadosamente seleccionado para ofrecerte una experiencia gastronómica única. 
