--- a/src/index.html
+++ b/src/index.html
@@ -47,22 +47,23 @@
       </div>
     </header>
     <main>
+      <!-- CARROUSEL IMAGES -->
       <div id="carouselFade" class="carousel slide carousel-fade" data-bs-ride="true">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./img/american-heritage-chocolate-vdx5hPQhXFk-unsplash-2-2.jpg" class="d-block w-100" alt="...">
+            <img src="./img/carrousel/frederick-medina-J8uTXtVbEbw-unsplash-2.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./img/austin-moncada-JHMG8eWbTfs-unsplash-2.jpg" class="d-block w-100" alt="...">
+            <img src="./img/carrousel/american-heritage-chocolate-vdx5hPQhXFk-unsplash-2-2.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./img/frederick-medina-J8uTXtVbEbw-unsplash-2.jpg" class="d-block w-100" alt="...">
+            <img src="./img/carrousel/austin-moncada-JHMG8eWbTfs-unsplash-2.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./img/henrik-hjortshoj-XtYPjMTNQUA-unsplash-2.jpg" class="d-block w-100" alt="...">
+            <img src="./img/carrousel/henrik-hjortshoj-XtYPjMTNQUA-unsplash-2.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./img/shivansh-sethi-dKT6Q7q2UKs-unsplash-2.jpg" class="d-block w-100" alt="...">
+            <img src="./img/carrousel/shivansh-sethi-dKT6Q7q2UKs-unsplash-2.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselFade" data-bs-slide="prev">
@@ -94,15 +95,16 @@
             tabindex="0"
             data-bs-trigger="focus"
             data-bs-html="true"
-            data-bs-content='Sumérgete en un mundo de colores y sabores con nuestra espectacular Tarta de Arcoíris. Se compone de capas esponjosas 
-              y vibrantes en cada tono del arcoíris, unidas por una suave crema de vainilla. Decorada con un delicado frosting blanco y coloridos confites. 
-              Un deleite visual y de sabor. Perfecta para celebrar cualquier ocasión especial.
+            data-bs-content='Descubre la tarta perfecta para el Día de la Madre. 
+            <br><br>Una base esponjosa de bizcocho se combina con la suavidad de la nata montada y el delicioso toque de la fresa. 
+            <br>Cada rebanada es una explosión de sabor, envuelta en una presentación elegante y delicada. Una cinta adornada con flores naturales rosadas rodea la tarta, aportando un toque de frescura y distinción. 
+            <br><br>Sorprende a mamá con este dulce y hermoso regalo, ideal para celebrar su día especial con amor y estilo.
             <br>
             <a href="./index.html" class="btn btn-primary buy-btn">¡La quiero!</a>' />
           </div>
-          <img class="item-product-img" loading="lazy" src="./img/tartas/tarta01.jpg" alt="Imagen de tarta de chocolate" />
-          <div class="item-name">Tarta 3 chocolates</div>
-          <div class="item-price">Desde 34,99€</div>
+          <img class="item-product-img" loading="lazy" src="./img/tartas/tarta-flores-madres.jpeg" alt="Imagen de tarta de chocolate" />
+          <div class="item-name">Tarta floral</div>
+          <div class="item-price">Desde xx,xx€</div>
           <div class="item-buy-button">
             <button href="./index.html" class="btn btn-primary buy-btn">¡La quiero!</button>
           </div>
@@ -552,7 +554,7 @@
           </div>
         </div>
         <!-- WAVES INFERIORES -->
-        <div class="custom-shape-divider-top-1718731153">
+        <div class="custom-shape-divider-top-1718731153 bottom-waves">
           <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
               <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
               <path d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z" opacity=".5" class="shape-fill"></path>
