Arreglos de bugs y contacto

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
           </div>
           <a href="#news" class="menu-hidden">Novedades</a>
           <img src="img/yulls_bakery_logo.png" alt="Yulls Bakery Logo" />
-          <a href="./index.html" class="menu-hidden">Contacto</a>
+          <a href="#contact" class="menu-hidden">Contacto</a>
           <a href="./index.html" class="menu-hidden">Redes</a>
           <!-- BURGER DROPDOWN -->
           <div class="dropdown dropdown-hidden">
@@ -103,8 +103,8 @@
             <a href="./index.html" class="btn btn-primary buy-btn">¡La quiero!</a>' />
           </div>
           <img class="item-product-img" loading="lazy" src="./img/tartas/tarta-flores-madres.jpeg" alt="Imagen de tarta de chocolate" />
-          <div class="item-name">Tarta floral</div>
-          <div class="item-price">Desde xx,xx€</div>
+          <div class="item-name">Tarta Floral</div>
+          <div class="item-price">Desde XX,XX€</div>
           <div class="item-buy-button">
             <button href="./index.html" class="btn btn-primary buy-btn">¡La quiero!</button>
           </div>
@@ -119,16 +119,16 @@
             tabindex="0"
             data-bs-trigger="focus"
             data-bs-html="true"
-            data-bs-content='Sumérgete en un mundo de colores y sabores con nuestra espectacular Tarta de Arcoíris. Se compone de capas esponjosas 
-              y vibrantes en cada tono del arcoíris, unidas por una suave crema de vainilla. Decorada con un delicado frosting blanco y coloridos confites. 
-              Un deleite visual y de sabor. Perfecta para celebrar cualquier ocasión especial.
-            <br>
+            data-bs-content='Tarta infantil temática, ¡perfecta para cualquier celebración! 
+            <br>Con una base de esponjoso bizcocho de vainilla y capas generosas, está cubierta con un suave y cremoso buttercream. El frosting representa al personaje que desees, usando detalles en fondant y glaseado para una apariencia auténtica. 
+            <br><br>Esta deliciosa y visualmente atractiva tarta es ideal para alegrar cualquier fiesta infantil. 
+            <br><br>Además, ofrecemos personalización con otros personajes favoritos. ¡Haz de tu evento un momento inolvidable con esta tarta personalizada!
             <a href="./index.html" class="btn btn-primary buy-btn">¡La quiero!</a>' />
           </div>
-          <img class="item-product-img" loading="lazy" src="./img/tartas/tarta02.jpg" alt="Imagen de tarta arcoiris" />
+          <img class="item-product-img" loading="lazy" src="./img/tartas/tarta-personalizada-1.jpeg" alt="Imagen de tarta arcoiris" />
             
-          <div class="item-name">Tarta Arcoiris</div>
-          <div class="item-price">Desde 39,99€</div>
+          <div class="item-name">Tarta Personalizada Infantil</div>
+          <div class="item-price">Desde XX,XX€</div>
           <div class="item-buy-button">
             <button href="./index.html" class="btn btn-primary buy-btn">¡La quiero!</button>
           </div>
@@ -222,11 +222,11 @@
             <br>
             <a href="./index.html" class="btn btn-primary buy-btn">¡La quiero!</a>' />
           </div>
-          <img class="item-product-img" loading="lazy" src="./img/cupcakes/cupcake01.jpg" alt="Imagen de tarta de chocolate" />
-          <div class="item-name">Cupcake Chocolate</div>
-          <div class="item-price">Desde 34,99€</div>
+          <img class="item-product-img" loading="lazy" src="./img/cupcakes/cupcakes-colores-1.jpeg" alt="Cupcakes de colores para el Orgullo" />
+          <div class="item-name">Cupcakes de colores 🌈</div>
+          <div class="item-price">Desde XX,XX€</div>
           <div class="item-buy-button">
-            <button href="./index.html" class="btn btn-primary buy-btn">¡La quiero!</button>
+            <button href="./index.html" class="btn btn-primary buy-btn">¡Lo quiero!</button>
           </div>
         </div>
         <!-- ITEM 2 -->
@@ -495,20 +495,21 @@
           <div class="accordion-item">
             <h2>
               <button class="accordion-button news-text-title" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                Novedades en Yull's Bakery: ¡Tarta San Marcos! 🍰
+                Novedades en Yull's Bakery: ¡Cupcakes festivos de colores! 🌈
               </button>
             </h2>
             <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
               <div class="accordion-body">
                 <div class="container-fluid news-container">
-                  <img class="item-product-img" loading="lazy" src="./img/tartas/tarta03.jpg" />
-                  <div class="news-text">Estamos emocionados de presentarte nuestra última incorporación a la familia de postres: la <strong>Tarta de San Marcos.</strong>
-                    <br><br>Con un irresistible bizcocho esponjoso impregnado de almendra y un toque de esencia de naranja, esta tarta captura la esencia misma de la tradición y el sabor artesanal.
-                    Cada bocado te transportará a la cocina de un maestro pastelero, donde cada ingrediente ha sido cuidadosamente seleccionado para ofrecerte una experiencia gastronómica única. 
-                    Su decoración elegante con almendras laminadas y una capa de glaseado sutilmente dulce garantizan que cada porción sea una verdadera delicia para los sentidos.
-                    <br><br>Ideal para cualquier ocasión especial o simplemente para darte un capricho dulce, la Tarta de San Marcos está disponible ahora en nuestra web para que la disfrutes en la comodidad de tu hogar. 
-                    <br>No esperes más para deleitarte con este clásico reinventado.
-                    <br>¡Déjate cautivar por el sabor incomparable de nuestra <strong>Tarta de San Marcos!</strong></div>
+                  <div class="news-img-container">
+                  <img class="item-product-img" loading="lazy" src="./img/cupcakes/cupcakes-colores-1.jpeg" />
+                  </div>
+                  <div class="news-text">¡Celebra el orgullo con nuestros vibrantes cupcakes de colores! 
+                    <br><br>Cada cupcake está cuidadosamente horneado con una base esponjosa y decorado con un delicioso frosting de mantequilla, teñido en los colores del arco iris. 
+                    Estos cupcakes no solo son una delicia para el paladar, sino también una explosión de alegría visual, perfectos para cualquier evento del Orgullo LGBTQ+. 
+                    <br><br>Con su sabor irresistible y su aspecto festivo, son ideales para compartir con amigos y seres queridos. 
+                    Además, cada compra apoya la inclusión y la diversidad. 
+                    <br><br>¡Haz de tu celebración del orgullo un evento aún más especial con nuestros cupcakes coloridos!</div>
                 </div>
               </div>
             </div>
@@ -523,10 +524,13 @@
             <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse show">
               <div class="accordion-body">
                 <div class="container-fluid news-container">
-                  <img class="item-product-img" loading="lazy" src="./img/tartas/tarta02.jpg" />
+                  <div class="news-img-container">
+                  <img class="news-product-img" loading="lazy" src="./img/tartas//tarta-flores-madres.jpeg" />
+                  <img class="news-product-img-b" loading="lazy" src="./img/tartas//tarta-flores-madres.jpeg" />
+                  </div>
                   <div class="news-text">Celebra el Día de la Madre con nuestra exclusiva Tarta de Rosas y Vainilla, diseñada para honrar a las mamás con elegancia y dulzura. 
                     <br><br>Esta hermosa tarta presenta capas esponjosas de bizcocho de vainilla, intercaladas con una suave crema de fresa. La cobertura, de un delicado frosting blanco, 
-                    está finamente decorada con toques de rosa y adornada con pétalos de flores comestibles, aportando un toque de belleza natural y fragante. 
+                    está finamente decorada con toques de rosa y adornada con flores reales, aportando un toque de belleza natural y fragante. 
                     <br>Cada bocado es una combinación perfecta de sabor y sofisticación, haciendo de esta tarta el regalo ideal para demostrar tu amor y aprecio en este día tan especial.
                   </div>
                 </div>
@@ -537,7 +541,7 @@
           <div class="accordion-item">
             <h3 class="accordion-header">
               <button class="accordion-button news-text-title" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="true" aria-controls="panelsStayOpen-collapseThree">
-                🧁 🌈 ¡Nuevos muffins! 
+                🧁 ¡Nuevos muffins! 
               </button>
             </h3>
             <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse show">
@@ -562,6 +566,11 @@
           </svg>
         </div>
       </div>
+    <!-- CONTACT FORM -->
+    <div class="section-title" aria-labelledby="contact" id="contact" role="region"><h1>Contacto</h1></div>
+    <div class="container-fluid form-container">
+
+    </div>
     </main>
     <footer>
       <div class="footer"></div>
