--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
           <img src="img/yulls_bakery_logo.png" alt="Yulls Bakery Logo" 
           aria-labelledby="logo" id="logo" role="region"/>
           <a href="#contact" class="menu-hidden">Contacto</a>
-          <a href="./index.html" class="menu-hidden">Redes</a>
+          <a href="#information" class="menu-hidden">Información</a>
           <!-- BURGER DROPDOWN -->
           <div class="dropdown dropdown-hidden">
             <button class="btn dropdown-toggle myBtn burger" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -41,7 +41,7 @@
             <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end">
               <li><a class="dropdown-item" href="#news">Novedades</a></li>
               <li><a class="dropdown-item" href="#contact">Contacto</a></li>
-              <li><a class="dropdown-item" href="./index.html">Redes</a></li>
+              <li><a class="dropdown-item" href="#information">Información</a></li>
             </ul>
           </div>
         </div>
@@ -560,6 +560,21 @@
           </svg>
         </div>
       </div>
+    <!-- INFORMATION -->
+    <div class="section-title" aria-labelledby="information" id="information" role="region"><h1>Información</h1></div>
+    <div class="container-fluid information">
+      <div class="info-text-container">
+        <p>Aquí se incluirá toda la información relativa a pedidos, pedidos mínimos, gastos, etc.</p>
+      </div>
+      <!-- WAVES INFERIORES -->
+      <div class="custom-shape-divider-top-1718731153 bottom-waves">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+            <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.8,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
+            <path d="M0,0V15.81C13,36.92,27.64,70.86,47.69,72.05,99.41,120.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.1,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.4,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z" opacity=".5" class="shape-fill"></path>
+            <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,41.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
+        </svg>
+      </div>
+    </div>
     <!-- CONTACT FORM -->
     <div class="section-title" aria-labelledby="contact" id="contact" role="region"><h1>Contacto</h1>
     </div>
@@ -583,7 +598,7 @@
           <label for="message" class="form-label" required>Escribe tu consulta</label>
           <textarea class="form-control" id="message" name="message" rows="5"></textarea>
         </div>
-        <div class="submitBtn"><input type="submit" class="btn btn-primary buy-btn" value="Enviar"></div>
+        <div class="submitBtn"><input type="submit" class="btn btn-primary buy-btn" id="submitBuyBtn" value="Enviar"></div>
         <div id="mensaje" class=""></div>
       </form>
     </div>
@@ -591,7 +606,7 @@
     <footer>
       <div class="footer">
         <h3>Desarrollo y diseño de <span class="footer-highlight">Javilonedev</span>
-        para <span class="footer-highlight">Yull's Bakery</span>
+        para <br><span class="footer-highlight">Yull's Bakery</span>
         <br><span class="footer-year">- 2024 -</span></h3>
       </div>
     </footer>
