Redireccionamiento de php

--- a/src/index.html
+++ b/src/index.html
@@ -579,7 +579,7 @@
     <div class="section-title" aria-labelledby="contact" id="contact" role="region"><h1>Contacto</h1>
     </div>
     <div class="container-fluid form-container">
-      <form action="https://javilonedev.es/index.php" 
+      <form action="https://javilonedev.es/formhandler.php" 
         method="post"
         id="yullsForm">
         <div class="mb-3">
