Corregidos nombres fotos

--- a/src/index.html
+++ b/src/index.html
@@ -271,8 +271,8 @@
           <img
             class="item-product-img"
             loading="lazy"
-            src="./img/tartas/tarta-cumpleaños.jpeg"
-            alt="Imagen de tarta de cumpleañose"
+            src="./img/tartas/tarta-cumpleanios.jpeg"
+            alt="Imagen de tarta de cumpleaños"
           />
           <div class="item-name">Tarta de cumpleaños</div>
           <div class="item-price">Desde XX,XX€</div>
@@ -316,7 +316,7 @@
           <img
             class="item-product-img"
             loading="lazy"
-            src="./img/tartas/Tarta-chocolate-3pisos.jpeg"
+            src="./img/tartas/tarta-chocolate.jpeg"
             alt="Imagen de tarta de chocolate"
           />
           <div class="item-name">Tarta de chocolate 3 pisos</div>
