Arreglo nombre artículos

--- a/src/index.html
+++ b/src/index.html
@@ -274,7 +274,9 @@
             src="./img/tartas/tarta-cumpleanios.jpeg"
             alt="Imagen de tarta de cumpleaños"
           />
-          <div class="item-name">Tarta de cumpleaños</div>
+          <div class="item-name">
+            Tarta de cumpleaños<br />Queso crema y zanahoria
+          </div>
           <div class="item-price">Desde XX,XX€</div>
           <div class="item-buy-button">
             <a
