Agregado formulario de ejemplo de la tarta floral

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,7 @@
     <meta name="keywords" content="tartas artesanales, dulces, repostería, muffins, pasteles, pedidos personalizados, Madrid" />
     <meta name="author" content="Javier López Lara" />
     <meta name="description" content="Tartas, muffins y dulces artesanales hechos con amor en Yulls Bakery. Personaliza tu pedido para cualquier ocasión especial en Madrid." />
-    <!-- Agregar esto -->
-    <link rel="icon" href="./images/favicon.ico" />
+    <link rel="icon" href="./img/cupcakeicon.svg" />
     <title>Yulls Bakery - Tartas y dulces artesanales en Madrid.</title>
     <link rel="stylesheet" href="./scss/styles.scss" />
   </head>
@@ -27,7 +26,7 @@
             </ul>
           </div>
           <a href="#news" class="menu-hidden">Novedades</a>
-          <img src="img/yulls_bakery_logo.png" alt="Yulls Bakery Logo" aria-labelledby="logo" id="logo" role="region" />
+          <a href="./index.html"><img src="img/yulls_bakery_logo.png" alt="Yulls Bakery Logo" aria-labelledby="logo" id="logo" role="region" /></a>
           <a href="#contact" class="menu-hidden">Contacto</a>
           <a href="#information" class="menu-hidden">Información</a>
           <!-- BURGER DROPDOWN -->
@@ -120,11 +119,10 @@
             <img src="./img/gluten-free-icon.svg" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="bottom" tabindex="0" data-bs-trigger="focus" data-bs-html="true" data-bs-content="Opción sin gluten" />
           </div>
           <img class="item-product-img" loading="lazy" src="./img/tartas/tarta-flores-madres.jpeg" alt="Tarta artesana para el día de la madre. Con nata montada, tonos rosas y flores naturales" />
-
           <div class="item-name">Tarta Floral</div>
           <div class="item-price">Desde XX,XX€</div>
           <div class="item-buy-button">
-            <a href="./index.html#contact" class="btn btn-primary buy-btn" id="cakeBtn1" title="Tarta Floral">¡La quiero!</a>
+            <a href="./tartafloral.html" class="btn btn-primary buy-btn" title="Tarta Floral">¡La quiero!</a>
           </div>
         </div>
         <!-- ITEM 2 -->
@@ -602,10 +600,6 @@
           <div class="mb-3">
             <label for="email" class="form-label" required>Email de contacto</label>
             <input type="email" class="form-control" id="email" name="email" placeholder="tu_correo@electrónico.com" />
-          </div>
-          <div class="mb-3">
-            <label for="order" class="form-label" required>Tu pedido</label>
-            <input type="text" class="form-control" id="order" name="order" placeholder="Escribe aquí tu encargo" />
           </div>
           <div class="mb-3">
             <label for="message" class="form-label" required>Escribe tu consulta</label>
