Arreglos formulario. Preparando setup nuevo formulario

--- a/src/html/tartafloral.html
+++ b/src/html/tartafloral.html
@@ -6,9 +6,9 @@
     <meta name="keywords" content="tartas artesanales, dulces, repostería, muffins, pasteles, pedidos personalizados, Madrid" />
     <meta name="author" content="Javier López Lara" />
     <meta name="description" content="Tartas, muffins y dulces artesanales hechos con amor en Yulls Bakery. Personaliza tu pedido para cualquier ocasión especial en Madrid." />
-    <link rel="icon" href="./img/cupcakeicon.svg" />
+    <link rel="icon" href="../img/cupcakeicon.svg" />
     <title>Yulls Bakery - Tartas y dulces artesanales en Madrid.</title>
-    <link rel="stylesheet" href="./scss/styles.scss" />
+    <link rel="stylesheet" href="../scss/styles.scss" />
   </head>
   <body>
     <header>
@@ -19,15 +19,15 @@
           <div class="dropdown">
             <button class="btn dropdown-toggle myBtn" type="button" data-bs-toggle="dropdown" aria-expanded="false">Dulces</button>
             <ul class="dropdown-menu dropdown-menu-dark">
-              <li><a class="dropdown-item" href="./index.html#tartas">Tartas</a></li>
-              <li><a class="dropdown-item" href="./index.html#cupcakes">Cupcakes</a></li>
-              <li><a class="dropdown-item" href="./index.html#sweets">Dulces</a></li>
-              <li><a class="dropdown-item" href="./index.html#sweets">Galletas</a></li>
+              <li><a class="dropdown-item" href="../index.html#tartas">Tartas</a></li>
+              <li><a class="dropdown-item" href="../index.html#cupcakes">Cupcakes</a></li>
+              <li><a class="dropdown-item" href="../index.html#sweets">Dulces</a></li>
+              <li><a class="dropdown-item" href="../index.html#sweets">Galletas</a></li>
             </ul>
           </div>
           <a href="#news" class="menu-hidden">Novedades</a>
-          <a href="./index.html"><img src="img/yulls_bakery_logo.png" alt="Yulls Bakery Logo" aria-labelledby="logo" id="logo" role="region" /></a>
-          <a href="./index.html#contact" class="menu-hidden">Contacto</a>
+          <a href="../index.html"><img src="../img/yulls_bakery_logo.png" alt="Yulls Bakery Logo" aria-labelledby="logo" id="logo" role="region" /></a>
+          <a href="../index.html#contact" class="menu-hidden">Contacto</a>
           <a href="#information" class="menu-hidden">Información</a>
           <!-- BURGER DROPDOWN -->
           <div class="dropdown dropdown-hidden">
@@ -48,7 +48,7 @@
     </header>
     <div class="container">
       <div class="goUp-btn">
-        <a href="#logo"><img src="./img/up-arrow.svg" alt="Flecha para subir la página" /></a>
+        <a href="#logo"><img src="../img/up-arrow.svg" alt="Flecha para subir la página" /></a>
       </div>
     </div>
     <main>
@@ -74,9 +74,9 @@
       </div>
       <div class="container-fluid form-product">
         <div class="product-form-img">
-          <img class="product-item product-blur" src="./img/tartas/tarta01.jpg" />
-          <img class="product-item" src="./img/tartas/tarta-flores-madres.jpeg" />
-          <img class="product-item product-blur" src="./img/tartas/tarta-cumpleanios.jpeg" />
+          <img class="product-item product-blur" src="../img/tartas/tarta01.jpg" />
+          <img class="product-item" src="../img/tartas/tarta-flores-madres.jpeg" />
+          <img class="product-item product-blur" src="../img/tartas/tarta-cumpleanios.jpeg" />
         </div>
         <form action="https://javilonedev.es/formhandler.php" method="post" id="yullsForm">
           <div class="mb-3">
@@ -191,7 +191,7 @@ Puedes contactar con nosotros en la sección 'Contacto'."
               <div class="accordion-body">
                 <div class="container-fluid news-container">
                   <div class="news-img-container">
-                    <img class="item-product-img" loading="lazy" src="./img/cupcakes/cupcakes-colores-1.jpeg" />
+                    <img class="item-product-img" loading="lazy" src="../img/cupcakes/cupcakes-colores-1.jpeg" />
                   </div>
                   <div class="news-text">
                     ¡Celebra el orgullo con nuestros vibrantes cupcakes de colores! <br /><br />Cada cupcake está cuidadosamente horneado con una base esponjosa y decorado con un delicioso frosting de mantequilla, teñido en los colores del arco iris. Estos
@@ -213,7 +213,7 @@ Puedes contactar con nosotros en la sección 'Contacto'."
               <div class="accordion-body">
                 <div class="container-fluid news-container">
                   <div class="news-img-container">
-                    <img class="item-product-img" loading="lazy" src="./img/tartas/tarta-flores-madres.jpeg" />
+                    <img class="item-product-img" loading="lazy" src="../img/tartas/tarta-flores-madres.jpeg" />
                   </div>
                   <div class="news-text">
                     Celebra el Día de la Madre con nuestra exclusiva Tarta de Rosas y Vainilla, diseñada para honrar a las mamás con elegancia y dulzura. <br /><br />Esta hermosa tarta presenta capas esponjosas de bizcocho de vainilla, intercaladas con una
@@ -232,7 +232,7 @@ Puedes contactar con nosotros en la sección 'Contacto'."
             <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse show">
               <div class="accordion-body">
                 <div class="container-fluid news-container">
-                  <img class="item-product-img" loading="lazy" src="./img/tartas/tarta-tematica-horiz.jpeg" />
+                  <img class="item-product-img" loading="lazy" src="../img/tartas/tarta-tematica-horiz.jpeg" />
                   <div class="news-text">
                     Nuestras tartas temáticas son el toque perfecto para cualquier celebración. Diseñadas a medida, cada una de nuestras creaciones está inspirada en tus personajes, colores o estilos favoritos, haciéndolas únicas y personalizadas para cada
                     ocasión. Desde cumpleaños hasta eventos especiales, nuestras tartas no solo son visualmente impresionantes, sino que también están elaboradas con ingredientes de la más alta calidad, garantizando un sabor irresistible.
@@ -270,7 +270,7 @@ Puedes contactar con nosotros en la sección 'Contacto'."
         </h3>
       </div>
     </footer>
-    <script type="module" src="./js/main.js"></script>
+    <script type="module" src="../js/main.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </body>
 </html>
