--- a/src/index.html
+++ b/src/index.html
@@ -122,7 +122,7 @@
           <div class="item-name">Tarta Floral</div>
           <div class="item-price">Desde XX,XX€</div>
           <div class="item-buy-button">
-            <a href="./tartafloral.html" class="btn btn-primary buy-btn" title="Tarta Floral">¡La quiero!</a>
+            <a href="./index.html#contact" class="btn btn-primary buy-btn" id="cakeBtn1" title="Tarta Floral">¡La quiero!</a>
           </div>
         </div>
         <!-- ITEM 2 -->
@@ -600,6 +600,10 @@
           <div class="mb-3">
             <label for="email" class="form-label" required>Email de contacto</label>
             <input type="email" class="form-control" id="email" name="email" placeholder="tu_correo@electrónico.com" />
+          </div>
+          <div class="mb-3">
+            <label for="order" class="form-label" required>Producto seleccionado</label>
+            <input type="order" class="form-control" id="order" name="order" />
           </div>
           <div class="mb-3">
             <label for="message" class="form-label" required>Escribe tu consulta</label>
