Prueba de build con html

--- a/src/index.html
+++ b/src/index.html
@@ -122,7 +122,7 @@
           <div class="item-name">Tarta Floral</div>
           <div class="item-price">Desde XX,XX€</div>
           <div class="item-buy-button">
-            <a href="./index.html#contact" class="btn btn-primary buy-btn" id="cakeBtn1" title="Tarta Floral">¡La quiero!</a>
+            <a href="./html/tartafloral.html" class="btn btn-primary buy-btn" id="" title="Tarta Floral">¡La quiero!</a>
           </div>
         </div>
         <!-- ITEM 2 -->
