Agregado enlace a whatsapp y correcciones formulario

--- a/src/html/tartafloral.html
+++ b/src/html/tartafloral.html
@@ -79,6 +79,10 @@
           <img class="product-item" src="../img/tartas/tarta-flores-madres.jpeg" />
           <img class="product-item product-blur" src="../img/tartas/tarta-cumpleanios.jpeg" />
         </div>
+        <div class="form-whatsapp">
+          <p>Puedes contactar mediante Whastsapp o bien mediante nuestro formulario.</p>
+          <a href="https://wa.me/633428178?text=Send20%a20%quote"><img src="../img/whatsapp.svg" alt="Imagen con enlace a Whatsapp" /></a>
+        </div>
         <form action="https://javilonedev.es/formhandler.php" method="post" id="yullsForm">
           <div class="mb-3">
             <label for="order" class="form-label" required>Tu pedido</label>
