--- a/src/index.html
+++ b/src/index.html
@@ -592,6 +592,10 @@
         <h1>Contacto</h1>
       </div>
       <div class="container-fluid form-container">
+        <div class="form-whatsapp">
+          <p>Puedes contactar mediante Whastsapp o bien mediante nuestro formulario de contacto</p>
+          <a href="https://wa.me/633428178"><img src="img/whatsapp.svg" alt="Imagen con enlace a Whatsapp" /></a>
+        </div>
         <form action="https://javilonedev.es/formhandler.php" method="post" id="yullsForm">
           <div class="mb-3">
             <label for="name" class="form-label" required>Nombre</label>
