--- a/src/html/tartafloral.html
+++ b/src/html/tartafloral.html
@@ -81,7 +81,7 @@
         </div>
         <div class="form-whatsapp">
           <p>Puedes contactar mediante Whastsapp o bien mediante nuestro formulario.</p>
-          <a id="whatsapp-link" href="#"><img src="img/whatsapp.svg" alt="Imagen con enlace a Whatsapp" /></a>
+          <a id="whatsapp-link" href="#"><img src="../img/whatsapp.svg" alt="Imagen con enlace a Whatsapp" /></a>
         </div>
         <form action="https://javilonedev.es/formhandler.php" method="post" id="yullsForm">
           <div class="mb-3">
