--- a/src/index.html
+++ b/src/index.html
@@ -594,7 +594,7 @@
       <div class="container-fluid form-container">
         <div class="form-whatsapp">
           <p>Puedes contactar mediante Whastsapp o bien mediante nuestro formulario de contacto</p>
-          <a href="https://wa.me/633428178"><img src="img/whatsapp.svg" alt="Imagen con enlace a Whatsapp" /></a>
+          <a id="whatsapp-link" href="#"><img src="../img/whatsapp.svg" alt="Imagen con enlace a Whatsapp" /></a>
         </div>
         <form action="https://javilonedev.es/formhandler.php" method="post" id="yullsForm">
           <div class="mb-3">
