Corregido carrousel. Eliminada sección. Imagenes personalizadas

--- a/src/html/tartafloral.html
+++ b/src/html/tartafloral.html
@@ -120,9 +120,9 @@
           <div class="mb-3">
             <label for="portions" class="form-label" required>Porciones</label>
             <select class="form-select" id="portions" name="portions">
-              <option value="15cm.10/12-Raciones" id="portions" name="portions">15 cm de diámetro. 10-12 raciones. Desde 45€</option>
-              <option value="20cm.18/20-Raciones" id="portions" name="portions">20 cm de diámetro. 18-20 raciones. Desde 55€</option>
-              <option value="25cm.28/30-Raciones" id="portions" name="portions">25 cm de diámetro. 28-30 raciones. Desde 65€.</option>
+              <option value="15cm.10/12-Raciones" id="portions" name="portions">15 cm de diámetro. 10-12 raciones</option>
+              <option value="20cm.18/20-Raciones" id="portions" name="portions">20 cm de diámetro. 18-20 raciones</option>
+              <option value="25cm.28/30-Raciones" id="portions" name="portions">25 cm de diámetro. 28-30 raciones</option>
             </select>
           </div>
           <div class="mb-3">
