--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
             <button class="btn dropdown-toggle myBtn" type="button" data-bs-toggle="dropdown" aria-expanded="false">Dulces</button>
             <ul class="dropdown-menu dropdown-menu-dark">
               <li><a class="dropdown-item" href="#tartas">Tartas</a></li>
-              <li><a class="dropdown-item" href="#cupcakes">Cupcakes</a></li>
+              <li><a class="dropdown-item" href="#sweets">Cupcakes</a></li>
               <li><a class="dropdown-item" href="#sweets">Dulces</a></li>
               <li><a class="dropdown-item" href="#sweets">Galletas</a></li>
             </ul>
